--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
     </address> 
     <footer id="contato">
-        <div class="container ">
+        <div class="container flex5">
             <div class="copyright">
                 <p>&#169; Somente para fins lucrativos.</p>
             </div>
