--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@
 
     <!--Rodapé-->
     <address>
-        <div class="container">
+        <div class="container flex6">
             <div class="contato">
                 <a href="https://api.whatsapp.com/send?phone=5511953192004" target="_blank">
                     <img src="img/whatsapp.png" alt="Abrir conversa">
                     <p>(11) 95319-2004</p>
                 </a>
+                <img src="img/fone.png" alt="Telefone">
+                <p>(11) 01234-1234</p>
             </div>
 
                 <div class="endereco">
@@ -166,11 +168,12 @@
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
+            </div>
     </address> 
     <footer id="contato">
         <div class="container flex5">
             <div class="copyright">
-                <p>&#169; Somente para fins lucrativos.</p>
+                <p>&#169; Somente para fins educativos.</p>
             </div>
             <div class="social">
                 <a href="https://www.instagram.com/luiz._siilva/" target="_blank"><img src="img/instagram.png"
